fixed some layout issues

--- a/public/styles/search.css
+++ b/public/styles/search.css
@@ -279,7 +279,7 @@ h1 {
     width: 32px;
     height: 32px;
     border-radius: 8px;
-    background: linear-gradient(135deg, #a855f7, #ec4899);
+    background: linear-gradient(135deg, #8702d4);
     border: none;
     display: flex;
     align-items: center;
